--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="../../dist/output.css" rel="stylesheet" />
     <link href="../styles/style.css" rel="stylesheet" />
-    <link href="../assets/ico/coffee-icon.png" rel="icon" >
+    <link href="../../assets/ico/coffee-icon.png" rel="icon">
 </head>
 
 <body class="m-0 p-0">
@@ -36,13 +36,24 @@
             </div>
             <!-- Primary Navigation -->
             <div
-                class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-10 navigation-menu pb-3 md:pb-0 navigation-menu">
-                <a href="#" class="py-2 px-3 block text-2xl">Home</a>
-                <a href="#" class="py-2 px-3 block text-2xl">Cafe</a>
-                <a href="#" class="py-2 px-3 block text-2xl">Search</a>
+                class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-10 navigation-menu pb-3 md:pb-0 navigation-menu flex-1">
+                <a href="index.html" class="py-2 px-3 block text-2xl">Home</a>
+                <a href="cafe.html" class="py-2 px-3 block text-2xl">Cafe</a>
+                <a href="search.html" class="py-2 px-3 block text-2xl">Search</a>
+            </div>
+            <!-- User Icon -->
+            <div class="hidden md:flex items-center">
+                <a href="../auth/login.php" class="flex items-center text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M5.121 17.804A12.027 12.027 0 0112 15c2.45 0 4.785.73 6.879 2.074M12 9a4 4 0 100-8 4 4 0 000 8zm-9 12a9 9 0 1118 0H3z" />
+                    </svg>
+                </a>
             </div>
         </div>
     </nav>
+
 
     <!-- Main Content -->
     <div class="relative h-screen flex items-center justify-center bg-cover bg-center hero">
@@ -50,7 +61,8 @@
             <div>
                 <h1 class="text-7xl font-bold leading-none mb-4">Unleash Your Inner <br> Coffee Explorer</h1>
                 <p class="text-2xl"><span class="text-red-600 font-bold">Discover</span> Your Next <br> Caffeinated
-                    <span class="text-red-600 font-bold">Adventure</span></p>
+                    <span class="text-red-600 font-bold">Adventure</span>
+                </p>
             </div>
             <div class="coffee-cup">
                 <img src="../../assets/img/coffee-cup.png" alt="Coffee Cup" class="h-96">
@@ -61,15 +73,18 @@
     <!-- Section 2 -->
     <section class="py-16 bg-gray-100">
         <div class="container mx-auto px-4 text-center">
-            <h2 class="text-5xl font-bold mb-8">Let's take a <span class="text-red-600">search</span> for your <span class="text-red-600">cafe!</span></h2>
+            <h2 class="text-5xl font-bold mb-8">Let's take a <span class="text-red-600">search</span> for your <span
+                    class="text-red-600">cafe!</span></h2>
             <div class="flex justify-center items-center">
                 <div class="coffee-cup">
                     <img src="../../assets/img/coffee-man.png" alt="Animated Man" class="h-64">
                 </div>
                 <div class="text-left">
-                    <p class="text-2xl mb-4">Find the best cafes around you and explore new places to enjoy your coffee.</p>
+                    <p class="text-2xl mb-4">Find the best cafes around you and explore new places to enjoy your coffee.
+                    </p>
                     <a href="cafe.html">
-                        <button class="px-6 py-3 bg-red-600 text-white text-xl font-semibold rounded hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-600 focus:ring-opacity-50">
+                        <button
+                            class="px-6 py-3 bg-red-600 text-white text-xl font-semibold rounded hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-600 focus:ring-opacity-50">
                             Search
                         </button>
                     </a>
@@ -111,7 +126,7 @@
         handleImageVisibility(); // Call initially
 
         // Navbar transparency on scroll
-        window.addEventListener('scroll', function() {
+        window.addEventListener('scroll', function () {
             const navbar = document.querySelector('.navbar');
             if (window.scrollY > 0) {
                 navbar.classList.add('navbar-scrolled');
