fix: edit route

--- a/src/pages/cafe.html
+++ b/src/pages/cafe.html
@@ -138,6 +138,84 @@
                         <button class="details-button bg-gray-700 text-white py-2 px-4 rounded">See Details!</button>
                     </div>
                 </div>
+                <div class="cafe-card rounded-lg text-center overflow-hidden">
+                    <img src="../../assets/img/cafe.jpeg" alt="Kopiko Cafe">
+                    <div class="p-4">
+                        <h2 class="text-xl font-bold mb-2">KOPIKO CAFE</h2>
+                        <div class="flex justify-center space-x-4 mb-2">
+                            <div class="icon-wrapper">
+                                <span>📶</span>
+                                <div class="icon-tooltip">Wi-Fi Available</div>
+                            </div>
+                            <div class="icon-wrapper">
+                                <span>🔌</span>
+                                <div class="icon-tooltip">Power Outlets</div>
+                            </div>
+                            <div class="icon-wrapper">
+                                <span>☕</span>
+                                <div class="icon-tooltip">Outside Food Allowed</div>
+                            </div>
+                            <div class="icon-wrapper">
+                                <span>🚬</span>
+                                <div class="icon-tooltip">Smoking Area</div>
+                            </div>
+                        </div>
+                        <p class="mb-4">30Km From Campus</p>
+                        <button class="details-button bg-gray-700 text-white py-2 px-4 rounded">See Details!</button>
+                    </div>
+                </div>
+                <div class="cafe-card rounded-lg text-center overflow-hidden">
+                    <img src="../../assets/img/cafe.jpeg" alt="Kopiko Cafe">
+                    <div class="p-4">
+                        <h2 class="text-xl font-bold mb-2">KOPIKO CAFE</h2>
+                        <div class="flex justify-center space-x-4 mb-2">
+                            <div class="icon-wrapper">
+                                <span>📶</span>
+                                <div class="icon-tooltip">Wi-Fi Available</div>
+                            </div>
+                            <div class="icon-wrapper">
+                                <span>🔌</span>
+                                <div class="icon-tooltip">Power Outlets</div>
+                            </div>
+                            <div class="icon-wrapper">
+                                <span>☕</span>
+                                <div class="icon-tooltip">Outside Food Allowed</div>
+                            </div>
+                            <div class="icon-wrapper">
+                                <span>🚬</span>
+                                <div class="icon-tooltip">Smoking Area</div>
+                            </div>
+                        </div>
+                        <p class="mb-4">30Km From Campus</p>
+                        <button class="details-button bg-gray-700 text-white py-2 px-4 rounded">See Details!</button>
+                    </div>
+                </div>
+                <div class="cafe-card rounded-lg text-center overflow-hidden">
+                    <img src="../../assets/img/cafe.jpeg" alt="Kopiko Cafe">
+                    <div class="p-4">
+                        <h2 class="text-xl font-bold mb-2">KOPIKO CAFE</h2>
+                        <div class="flex justify-center space-x-4 mb-2">
+                            <div class="icon-wrapper">
+                                <span>📶</span>
+                                <div class="icon-tooltip">Wi-Fi Available</div>
+                            </div>
+                            <div class="icon-wrapper">
+                                <span>🔌</span>
+                                <div class="icon-tooltip">Power Outlets</div>
+                            </div>
+                            <div class="icon-wrapper">
+                                <span>☕</span>
+                                <div class="icon-tooltip">Outside Food Allowed</div>
+                            </div>
+                            <div class="icon-wrapper">
+                                <span>🚬</span>
+                                <div class="icon-tooltip">Smoking Area</div>
+                            </div>
+                        </div>
+                        <p class="mb-4">30Km From Campus</p>
+                        <button class="details-button bg-gray-700 text-white py-2 px-4 rounded">See Details!</button>
+                    </div>
+                </div>
                 <!-- Add more cards as needed -->
             </div>
         </div>
