fix: edit title

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -59,7 +59,7 @@
     <div class="relative h-screen flex items-center justify-center bg-cover bg-center hero">
         <div class="relative z-20 max-w-5xl mx-auto px-4 flex items-center justify-between text-white">
             <div>
-                <h1 class="text-7xl font-bold leading-none mb-4">Unleash Your Inner <br> Coffee Explorer</h1>
+                <h1 class="text-7xl font-bold leading-none mb-4">Unleash Your Inner <br> Cafe Explorer</h1>
                 <p class="text-2xl"><span class="text-red-600 font-bold">Discover</span> Your Next <br> Caffeinated
                     <span class="text-red-600 font-bold">Adventure</span>
                 </p>
