fix: edit gambar

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -64,9 +64,9 @@
                     <span class="text-red-600 font-bold">Adventure</span>
                 </p>
             </div>
-            <div class="coffee-cup">
+            <!-- <div class="coffee-cup">
                 <img src="../../assets/img/coffee-cup.png" alt="Coffee Cup" class="h-96">
-            </div>
+            </div> -->
         </div>
     </div>
 
