fix: edit caption

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -80,7 +80,7 @@
                     <img src="../../assets/img/coffee-man.png" alt="Animated Man" class="h-64">
                 </div>
                 <div class="text-left">
-                    <p class="text-2xl mb-4">Find the best cafes around you and explore new places to enjoy your coffee.
+                    <p class="text-2xl mb-4">Find the best cafes around you and explore new places to enjoy your meal.
                     </p>
                     <a href="cafe.html">
                         <button
